# obidi-map-my-world

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pr_check.yaml
config/: development.yaml
docs/: Makefile
docs/decision-records/: 2024-11-04_database.md  2024-11-04_domain.md  2024-11-04_modules.md  template.md
infrastructure/: Dockerfile
src/app/: __init__.py  api.py  api_instance.py  application.py  celery.py  container.py  fast_api.py  fast_stream.py  logger.py  router.py  utils.py  worker_instance.py
src/app/instances/: api.py  subscriber.py
src/config/: celery.py  fast_stream.py  mongodb.py
src/module/: container.py  providers.py
src/module/common/: container.py  utils.py
src/module/common/application/: command_bus.py  domain_event.py  domain_event_bus.py  events.py  integration_events.py  integration_events_bus.py
src/module/common/application/event/: base.py  domain_bus.py  integration.py  integration_bus.py
src/module/common/application/http/: __init__.py  objects.py  response.py  router.py  status.py
src/module/common/domain/: aggregate.py  aggregates.py  command.py  entities.py  events.py  projections.py  rules.py  types.py  values.py
src/module/common/infrastructure/: mongodb.py
src/module/geoquerier/: container.py
src/module/manager/: __init__.py  container.py
src/module/placemanager/: container.py
src/module/recommendation/: container.py
src/module/recommendation/domain/: evaluator.py  values.py
(+55 files in other folders)
