[tool.poetry]
name = "obidi-map-my-world"
version = "0.1.0"
description = ""
authors = ["Aran Moncusí Ramírez <aran@digitalpoet.info>"]
license = "AGPL3.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
fastapi = {extras = ["standard"], version = "^0.115.4"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
dependency-injector = "^4.43.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
log_cli = true
log_cli_level = "DEBUG"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
